@@ -30,6 +30,7 @@ DROP TABLE keyboards;
 DROP TABLE defaults;
 DROP TABLE legacy_things;
 DROP TABLE numeric_data;
+DROP TABLE mixed_case_monkeys;
 
 DROP DOMAIN D_BOOLEAN;
 
@@ -59,3 +60,4 @@ DROP GENERATOR keyboards_seq;
 DROP GENERATOR defaults_seq;
 DROP GENERATOR legacy_things_seq;
 DROP GENERATOR numeric_data_seq;
+DROP GENERATOR mixed_case_monkeys_seq;
