@@ -30,6 +30,7 @@ drop table fk_test_has_fk;
 drop table keyboards;
 drop table legacy_things;
 drop table numeric_data;
+drop table mixed_case_monkeys;
 
 drop sequence accounts_seq;
 drop sequence funny_jokes_seq;
@@ -61,3 +62,4 @@ drop sequence fk_test_has_fk_seq;
 drop sequence keyboards_seq;
 drop sequence legacy_things_seq;
 drop sequence numeric_data_seq;
+drop sequence mixed_case_monkeys_seq;
