@@ -240,3 +240,8 @@ CREATE TABLE numeric_data (
   my_house_population decimal(2),
   decimal_number_with_default decimal(3,2) default 2.78
 );
+
+CREATE TABLE mixed_case_monkeys (
+ "monkeyID" INTEGER PRIMARY KEY,
+ "fleaCount" INTEGER
+);
