@@ -31,3 +31,4 @@ DROP TABLE keyboards;
 DROP TABLE legacy_things;
 DROP TABLE numeric_data;
 DROP TABLE [order];
+DROP TABLE mixed_case_monkeys;
