@@ -29,5 +29,6 @@ DROP TABLE fk_test_has_pk
 DROP TABLE keyboards
 DROP TABLE legacy_things
 DROP TABLE numeric_data
+DROP TABLE mixed_case_monkeys
 DROP TABLE schema_info
 go
