@@ -1,0 +1,3 @@
+class MixedCaseMonkey < ActiveRecord::Base
+  set_primary_key 'monkeyID'
+end
