@@ -1,0 +1,6 @@
+first:
+  monkeyID: 1
+  fleaCount: 42
+second:
+  monkeyID: 2
+  fleaCount: 43
