@@ -1,5 +1,7 @@
 *SVN*
 
+* Consistently quote primary key column names.  #7763 [toolmantim]
+
 * Fixtures: fix YAML ordered map support.  #2665 [Manuel Holtgrewe, nfbuckley]
 
 * DateTimes assume the default timezone.  #7764 [Geoff Buesing]
